[package]
name = "skyplus"
version = "0.1.0"
authors = ["Martin Cowie <martinjcowie@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
csv = "1.1"
futures = "0.3"
indicatif = "0.15.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
num-traits = "0.2"
num-derive = "0.2"
ssdp-client = "1.0.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.4.3"
reqwest = { version = "0.11", features = ["json"] }
roxmltree = {version = "0.14.0", features = ["std"]}
url = "2.2.0"

# preferences = "1.1.0"
preferences = {git = "https://github.com/baysmith/preferences-rs.git"}
serde = { version = "^1.0.0", features = ["derive"] }

[[bin]]
path = "src/main.rs"
name = "skybox"
